add tailwind to project

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- temporary tailwind load, until building for push -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
-  <body>
-    xx
+  <body class="bg-black">
+    xxx
+    <div class="grid grid-cols-3">
+      <div class="col-span-1 border-2">x</div>
+      <div class="col-span-1 border-2">x</div>
+      <div class="col-span-1 border-2">x</div>
+    </div>
+
     <script src="/assets/js/script.js"></script>
   </body>
 </html>
