--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,8 @@
 
     <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
-  <body class="bg-black">
-    xxx
-    <div class="grid grid-cols-3">
-      <div class="col-span-1 border-2">x</div>
-      <div class="col-span-1 border-2">x</div>
-      <div class="col-span-1 border-2">x</div>
-    </div>
+  <body class="bg-black text-white">
+    {% include hero.html %}
 
     <script src="/assets/js/script.js"></script>
   </body>
