--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,9 @@
 
     <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
-  <body class="bg-black text-white">
-    {% include hero.html %}
+  <body>
+    {% include navbar.html %} {% include hero.html %}
+    <main></main>
 
     <script src="/assets/js/script.js"></script>
   </body>
