--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <!-- temporary tailwind load, until building for push -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="icon" href="/assets/images/favicon.ico" />
   </head>
   <body>
     {% include navbar.html %} {% include hero.html %}
