convert navbar tsx to standard html5

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,23 +1,19 @@
-<header className="sticky z-10 inset-0 ">
-    <nav className="nav-menu w-full" aria-label="Navigation">
-      <ul className="flex w-full items-center -md:px-3 px-6 py-3 uppercase text-[18px] tracking-widest" role="menubar" aria-label="Main Navigation">
-        <li className="group" role="menuitem">
-          <a className="flex flex-col justify-center" href="/" aria-label="Home">
-            <span className="sr-only">Home</span>
-            <Image className="-md:max-w-36" src="/dark-logo.png" alt="Princeps Tech LLC Logo" width={188} height={44} />
-            <span className="mx-auto -md:text-[9px] md:text-[12px] -md:tracking-[8px] md:tracking-[9px] translate-y-1 group-hover:text-pank transition-text duration-300">Tech LLC</span>
-          </a>
-        </li>
-        <li role="menuitem" className="self-start ml-auto -md:mr-5 mr-16 mt-1.5 sm:-translate-y-px">
-          <Link className="shine hover:text-pank -sm:text-[15px] transition-text duration-300" href="#showcase">
-            Showcase
-          </Link>
-        </li>
-        <li role="menuitem" className="self-start mt-1.5">
-          <Link className="hover:text-pank -sm:text-[14px] transition-text duration-300" href="#kicker">
-            Contact<span className="blinker">_</span>
-          </Link>
-        </li>
-      </ul>
-    </nav>
+<header class="sticky z-10 inset-0">
+  <nav class="nav-menu w-full" aria-label="Navigation">
+    <ul class="flex w-full items-center -md:px-3 px-6 py-3 uppercase text-[18px] tracking-widest" role="menubar" aria-label="Main Navigation">
+      <li class="group" role="menuitem">
+        <a class="flex flex-col justify-center" href="/" aria-label="Home">
+          <span class="sr-only">Home</span>
+          <image class="-md:max-w-36" src="/assets/images/dark-logo.png" alt="Princeps Tech LLC Logo" />
+          <span class="mx-auto -md:text-[9px] md:text-[12px] -md:tracking-[8px] md:tracking-[9px] translate-y-1 group-hover:text-pank transition-text duration-300">Tech LLC</span>
+        </a>
+      </li>
+      <li role="menuitem" class="self-start ml-auto -md:mr-5 mr-16 mt-1.5 sm:-translate-y-px">
+        <a class="shine hover:text-pank -sm:text-[15px] transition-text duration-300" href="#showcase"> Showcase </a>
+      </li>
+      <li role="menuitem" class="self-start mt-1.5">
+        <a class="hover:text-pank -sm:text-[14px] transition-text duration-300" href="#kicker"> Contact<span class="blinker">_</span> </a>
+      </li>
+    </ul>
+  </nav>
 </header>
