add meta title and description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>{% if page.metatitle %}{{ page.metatitle }} | {% endif %}Princeps Tech LLC</title>
+    <meta name="description" content="{{ page.metadescription }}" />
     <!-- temporary tailwind load, until building for push -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="icon" href="/assets/images/favicon.ico" />
   </head>
   <body>
