update old tsx notation

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,6 @@
 <section class="relative min-h-200 -md:h-[calc(100vh-71px)] md:h-[calc(100vh-86px)] flex flex-col justify-center items-center">
   <a class="absolute z-0 w-8 h-8 -md:right-6 right-20 bottom-20 group floating" href="#showcase" role="link" aria-label="Skip to main content">
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" x="100px" y="100px" viewBox="0 0 256 256">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="100px" y="100px" viewBox="0 0 256 256">
       <g>
         <g>
           <path class="group-hover:fill-pank transition-all duration-200" fill="#d1e4dd" d="M178.6,111.1V10H77.4v101.1H10v33.7h33.7v33.7h33.7v33.7h33.7V246h33.7v-33.7h33.7v-33.7h33.7v-33.7H246v-33.7H178.6z" />
