correctly configure typescript to compile js and serve to local

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -9,7 +9,7 @@
     </svg>
   </a>
 
-  <img id="pixel-curtis" class="mx-auto" src="/assets/images/curtis.gif?" alt="A pixelated and cartoonized photo of Curtis" width="{538}" height="{732}" />
+  <img id="pixel-curtis" class="mx-auto" src="/assets/images/curtis.gif" alt="A pixelated and cartoonized photo of Curtis" />
 
   <header class="typewriter relative -sm:bottom-[10vh] bottom-[15vh]">
     <h1>Hi. I&apos;m Curtis, a web developer.</h1>
