--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>{% if page.meta_title %}{{ page.meta_title }} | {% endif %}Princeps Tech LLC</title>
     <meta name="description" content="{{ page.meta_description }}" />
     <!-- temporary tailwind load, until building for push -->
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="icon" href="/assets/images/favicon.ico" />
@@ -15,6 +15,7 @@
     {% include navbar.html %} {% include hero.html %}
     <main></main>
 
-    <script src="/assets/js/script.js"></script>
+    <!-- <script src="/assets/js/script.js"></script> -->
+    <script type="module" src="/assets/js/dist/script.js"></script>
   </body>
 </html>
