added pixel font to project

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,14 +6,338 @@
     <title>{% if page.meta_title %}{{ page.meta_title }} | {% endif %}Princeps Tech LLC</title>
     <meta name="description" content="{{ page.meta_description }}" />
     <!-- temporary tailwind load, until building for push -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="icon" href="/assets/images/favicon.ico" />
   </head>
   <body>
     {% include navbar.html %} {% include hero.html %}
-    <main></main>
+    <main>
+      {% include showcase.html %}
+      <div id="kicker">
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        TEST TEST TEST TEST TEST
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        <br />
+        TEST TEST TEST TEST TEST <br />
+        TEST TEST TEST TEST TEST MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX <br />
+        TEST TEST TEST TEST TEST
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX <br />
+        TEST TEST TEST TEST TEST <br />
+        TEST TEST TEST TEST TEST <br />
+        TEST TEST TEST TEST TEST
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        <br />
+        TEST TEST TEST TEST TEST <br />
+        TEST TEST TEST TEST TEST v MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        <br />
+        TEST TEST TEST TEST TEST MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX <br />
+        TEST TEST TEST TEST TEST <br />
+        TEST TEST TEST TEST TEST <br />
+        TEST TEST TEST TEST TEST
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX <br />
+        TEST TEST TEST TEST TEST <br />
+        TEST TEST TEST TEST TEST
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        <br />
+        TEST TEST TEST TEST TEST MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        <br />
+        TEST TEST TEST TEST TEST MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX <br />
+        TEST TEST TEST TEST TEST MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX <br />
+        TEST TEST TEST TEST TEST
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX <br />
+        TEST TEST TEST TEST TEST
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX <br />
+        TEST TEST TEST TEST TEST
+        <br />
+        MYSITE XX
+        <br />
+        MYSITE XX <br />
+        TEST TEST TEST TEST TEST
+        <br />
+      </div>
+    </main>
 
     <!-- <script src="/assets/js/script.js"></script> -->
     <script type="module" src="/assets/js/dist/script.js"></script>
