--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Press Start 2P";
+  src: url("../fonts/PressStart2P-Regular.ttf") format("truetype");
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -9,6 +14,11 @@ body {
   background-color: black;
   font-family: "Courier New", monospace;
   color: #d1e4dd;
+}
+
+h2 {
+  font-family: "Press Start 2P";
+  font-size: 36px;
 }
 
 /* blur/darken anything that passes under the nav as we scroll */
