--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% if page.meta_title %}{{ page.meta_title }} | {% endif %}Princeps Tech LLC</title>
     <meta name="description" content="{{ page.meta_description }}" />
-    <!-- temporary tailwind load, until building for push -->
+    <!-- For development: -->
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <!-- <link rel="stylesheet" href="/assets/css/main.css" /> -->
+    <!-- End For development: -->
 
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="icon" href="/assets/images/favicon.ico" />
