--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,15 +4,15 @@
       <li class="group" role="menuitem">
         <a class="flex flex-col justify-center" href="/" aria-label="Home">
           <span class="sr-only">Home</span>
-          <image class="-md:max-w-36" src="/assets/images/dark-logo.png" alt="Princeps Tech LLC Logo" />
-          <span class="mx-auto -md:text-[9px] md:text-[12px] -md:tracking-[8px] md:tracking-[9px] translate-y-1 group-hover:text-pank transition-text duration-300">Tech LLC</span>
+          <image class="-md:max-w-28" src="/assets/images/dark-logo.png" alt="Princeps Tech LLC Logo" />
+          <span class="mx-auto text-[9px] md:text-[12px] tracking-[8px] md:tracking-[9px] -md:translate-x-0.5 translate-y-0.5 md:translate-y-1 group-hover:text-pank transition-text duration-300">Tech LLC</span>
         </a>
       </li>
-      <li role="menuitem" class="self-start ml-auto -md:mr-5 mr-16 mt-1.5 sm:-translate-y-px">
-        <a class="shine hover:text-pank -sm:text-[15px] transition-text duration-300" href="#showcase"> Showcase </a>
+      <li role="menuitem" class="self-start ml-auto -md:mr-5 mr-16 mt-1.5">
+        <a class="shine hover:text-pank -md:text-[12px] font-playertwo transition-text duration-300" href="#showcase"> Showcase </a>
       </li>
       <li role="menuitem" class="self-start mt-1.5">
-        <a class="hover:text-pank -sm:text-[14px] transition-text duration-300" href="#kicker"> Contact<span class="blinker">_</span> </a>
+        <a class="match hover:text-pank -md:text-[12px] font-playertwo transition-text duration-300" href="#kicker"> About<span class="blinker">_</span> </a>
       </li>
     </ul>
   </nav>
