better english on hero typewriter text

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -12,6 +12,6 @@
   <img id="pixel-curtis" class="mx-auto" src="/assets/images/curtis.gif" alt="A pixelated and cartoonized photo of Curtis" />
 
   <header class="typewriter relative -sm:bottom-[10vh] bottom-[15vh]">
-    <h1>Hi. I&apos;m Curtis, a web developer.</h1>
+    <h1>Hi, I&apos;m Curtis. A web developer.</h1>
   </header>
 </section>
