add a little pink to header navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
         <a class="flex flex-col justify-center" href="/" aria-label="Home">
           <span class="sr-only">Home</span>
           <image class="-md:max-w-28" src="/assets/images/dark-logo.png" alt="Princeps Tech LLC Logo" />
-          <span class="mx-auto text-[9px] md:text-[12px] tracking-[8px] md:tracking-[9px] -md:translate-x-0.5 translate-y-0.5 md:translate-y-1 group-hover:text-pank transition-text duration-300">Tech LLC</span>
+          <span class="mx-auto text-[9px] md:text-[12px] tracking-[8px] md:tracking-[9px] -md:translate-x-0.5 translate-y-0.5 md:translate-y-1 text-pank">Tech LLC</span>
         </a>
       </li>
       <li role="menuitem" class="self-start ml-auto -md:mr-5 mr-16 mt-1.5">
