--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,6 +1,6 @@
 <section id="showcase" class="flex flex-col max-w-400 mx-auto pt-40 -md:px-3 px-6">
   <header class="flex flex-col justify-center">
-    <h1 class="uppercase shine realbig">Showcase</h1>
+    <h1 class="shinebig">Showcase</h1>
     <p class="">I build websites and web apps. I have an eye for detail, I&apos;m proud to showcase</p>
   </header>
 
@@ -10,10 +10,11 @@
       <img class="zooms absolute w-full h-full z-0 inset-0 object-cover" src="{{project.image}}" alt="Screenshot of the {{project.title}} website." />
     </div>
     <div class="-xl:w-3/5 xl:w-1/2 relative">
-      <div class="max-w-lg mx-auto flex flex-col justify-center h-full z-10">
-        <h2 class="substep">{{project.title}}</h2>
-
-        <div class="substep animation__delay-short marquee relative flex text-micro font-bold">
+      <div class="max-w-lg mx-auto flex flex-col justify-center h-full z-10 text-center">
+        {% if project.title %}
+        <h2 class="substep mb-3.5">{{project.title}}</h2>
+        {% endif %} {% if project.tech %}
+        <div class="substep animation__delay-short marquee relative flex text-micro mb-5">
           <ul class="marquee__content">
             {% for tech in project.tech %}
             <li class="px-3 pt-1.5 pb-1 whitespace-pre mr-4">{{ tech }}</li>
@@ -27,16 +28,17 @@
           <div class="absolute top-0 right-0 bottom-0 bg-gradient-to-r from-transparent to-black"></div>
           <div class="absolute top-0 left-0 bottom-0 bg-gradient-to-l from-transparent to-black"></div>
         </div>
-
-        <p class="substep animation__delay-medium">{{project.description}}</p>
-
-        <a class="substep animation__delay-long font-body flex group hover:text-pank font-playertwo transition-all duration-300" href="{{project.url}}" target="_blank" rel="noopener noreferrer">
+        {% endif %} {% if project.description %}
+        <p class="substep animation__delay-medium mb-7">{{project.description}}</p>
+        {% endif %} {% if project.url %}
+        <a class="substep animation__delay-long font-body flex group hover:text-pank font-playertwo transition-all duration-300 w-full justify-center" href="{{project.url}}" target="_blank" rel="noopener noreferrer">
           <span class="mr-3">View Project</span>
 
           <svg class="group-hover:translate-x-2 transition-all duration-300" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 9" width="28">
             <polygon class="group-hover:fill-pank transition-all duration-300" fill="#d1e4dd" points="1,5 5,5 5,7 6,7 6,6 7,6 7,5 8,5 8,4 7,4 7,3 6,3 6,2 5,2 5,4 1,4" />
           </svg>
         </a>
+        {% endif %}
       </div>
     </div>
   </article>
